--- a/source/index.html
+++ b/source/index.html
@@ -45,16 +45,18 @@
         </ul>
       </nav>
       <!-- Навигационное меню (открытое) end -->
+    </div>
   </header>
-        <!-- Навигационное меню (закрытое) start -->
-        <div class="menu__hide menu__hide-add">
-          <a class="menu__logo" href="index.html">
-            <img class="menu__pic" src="img/logotype-mobile.svg" alt="Логотип «Седона»">
-          </a>
-          <img class="menu__burger" src="img/icon-menu.svg" alt="Кнопка меню «бургер»">
-        </div>
-      </div>
-      <!-- Навигационное меню (закрытое) end -->
+  <!-- Навигационное меню (закрытое) start -->
+  <div class="menu-hide">
+    <div class="menu-hide__hide menu-hide__hide-add">
+      <a class="menu-hide__logo" href="index.html">
+        <img class="menu-hide__pic" src="img/logotype-mobile.svg" alt="Логотип «Седона»">
+      </a>
+      <img class="menu-hide__burger" src="img/icon-menu.svg" alt="Кнопка меню «бургер»">
+    </div>
+  </div>
+  <!-- Навигационное меню (закрытое) end -->
   <!-- Навигационное меню end -->
 
   <main class="content">
@@ -66,16 +68,19 @@
       <div class="welcome__wrapper">
         <img class="welcome__welcome" src="img/welcome.svg" alt="Welcome">
         <div class="welcome__group-gorgeous">
-          <img class="welcome__line" src="img/to-the-gorgeous-line.svg" width="17" height="1" alt="-to the gorgeous-line">
+          <img class="welcome__line" src="img/to-the-gorgeous-line.svg" width="17" height="1"
+            alt="-to the gorgeous-line">
           <img class="welcome__gorgeous" src="img/to-the-gorgeous.svg" width="108" height="17" alt="-to the gorgeous-">
-          <img class="welcome__line" src="img/to-the-gorgeous-line.svg" width="17" height="1" alt="-to the gorgeous-line">
+          <img class="welcome__line" src="img/to-the-gorgeous-line.svg" width="17" height="1"
+            alt="-to the gorgeous-line">
         </div>
         <img class="welcome__sedona" src="img/sedona-header-background.svg" width="282" height="48" alt="«Sedona»">
         <div class="welcome__group-canyon">
           <img class="welcome__quotes welcome__quotes-top" src="img/quotes-up.svg" width="8" height="5" alt="Кавычки">
           <img class="welcome__canyon" src="img/because-the-grand-canyon-sucks.svg" width="173" height="45"
             alt="«Because the grand canyon sucks!»">
-          <img class="welcome__quotes welcome__quotes-bottom" src="img/quotes-down.svg" width="8" height="5" alt="Кавычки">
+          <img class="welcome__quotes welcome__quotes-bottom" src="img/quotes-down.svg" width="8" height="5"
+            alt="Кавычки">
         </div>
       </div>
     </section>
@@ -116,7 +121,7 @@
           </div>
         </div>
         <span class="reasons__city"></span>
-        <div  class="reasons__wrapper">
+        <div class="reasons__wrapper">
           <ul class="reasons__itemadd">
             <li class="reasons__itemadd-item">
               <div class="reasons__itemadd-item-group">
